# COS214_Project

./: .gitignore  Alliance.cpp  Alliance.h  Country.cpp  Country.h  CountryComposite.cpp  CountryObserver.cpp  CountryObserver.h  Diplomacy.cpp  Diplomacy.h  FactoryMain.cpp  Fight.cpp  Fight.h  Negotiate.h  ObserverTest.cpp  Person.cpp  Person.h  PersonFactory.h  Person_test.cpp  Phase1.cpp  Phase1.h  Phase2.h  Phase3.h  Phase4.cpp  Phase4.h  Phase5.cpp  Phase5.h  PhasesofWar.h  README.md  Reports  State.h  Status.h  UnitBackup.cpp  UnitFactory.cpp  UnitFactory.h  Vehicle.cpp  Vehicle.h  VehicleFactory.cpp  VehicleFactory.h  WarPhaseChanger.h  (+3 more)
Data/: Country.cpp  Report (edited).docx
Data/Design/Classes/: Classes.docx
Data/Design/Functional_Requirements/: Functional_Requirements.docx
Data/Design/Patterns/: Design_Patterns.docx
Data/Doxygen Documentation/html/: Aggregate_8h_source.html  Alliance_8h_source.html  (+284 more)
System/: Aggregate.cpp  Aggregate.h  Alliance.cpp  Alliance.h  ArmyGeneral.cpp  ArmyGeneral.h  CMakeLists.txt  ConcreteAggregate.cpp  ConcreteAggregate.h  ConcreteTurnControl.cpp  ConcreteTurnControl.h  Country.cpp  Country.h  CountryComposite.cpp  CountryComposite.h  CountryObserver.cpp  CountryObserver.h  Decorator.cpp  Decorator.h  DeployContext.cpp  DeployContext.h  DeployType.cpp  DeployType.h  Diplomacy.cpp  Diplomacy.h  FactoryMain.cpp  Fight.cpp  Fight.h  Negotiate.cpp  Negotiate.h  ObserverTest.cpp  Person.cpp  Person.h  PersonFactory.cpp  PersonFactory.h  Person_test.cpp  Phase.cpp  Phase.h  Phase1.cpp  Phase1.h  (+39 more)
System/mainFiles/: Person_test.cpp
(+195 files in other folders)
